--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name=”robots” content="index, follow">
+    <link rel="icon" href="/js.png" />
+    <meta name="keywords" content="Todo, list, elijoao, garcia, developer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elijoao García - To-do list</title>
+    <meta property="og:title" content="Todo list - Elijoao García" />
+    <meta property="og:description" content="Simple To-do list aplication" />
+    <meta property="og:image" content="/main.png" />
+    <meta name="twitter:title" content="Todo list - Elijoao García" />
+    <meta name="twitter:image" content="/main.png" />
+    <meta name="twitter:creator" content="@ElijoaoGarcia" />
+    <link rel="apple-touch-icon" href="/js.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/js.png">
+    <link rel="apple-touch-startup-image" href="/js.png">
+    <meta name="apple-mobile-web-app-title" content="To-do">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <title>To-do list</title>
   </head>
   <body>
     <div id="root"></div>
